 
• For creating musical scores with Bach, added new methods for handling pitch as well as handling time -- instr(interval_limit_breakpoints) and instr(interval_limit_range_per_sec). See the Creating Notated Scores section of the documentation for details. This section of the documentation has also been rewritten.


##################
## Version 1.42 ##
##################
• Fixed a bug in the descriptors chromas and chromas-seg
 


#################
## Version 1.4 ##
#################
• Support for creating musical scores was added with the score() and instr() objects. See the "Creating Notated Scores" section of the documentation for details. For a video walkthrough, watch https://www.youtube.com/watch?v=pSf3GJEGzcU 

• The order of unit selection in agConcatenate.py has changed. In previous versions, corpus segments were selected for each target segment in turn. Now, one selection is made per target segment until there are no valid target segments remaining. This gives better results, especially when creating notated scores. This means concatenations will yield slightly different results from version 1.37.

• Dynamic Time Warping was added as a distance method for time varying similarity calculations. It is invoked like this: d('centroid', distance='dtw'). Thanks to James Bradbury.


##################
## Version 1.37 ##
##################
• Added csf(pitchfilter) method. See docs. Thanks to Grégoire Lorieux for the idea.


##################
## Version 1.34 ##
##################
• Added support for target sf NMF signal decomposition. See examples/08-polyphony.py. Thanks to PA Tremblay.


##################
## Version 1.33 ##
##################
• Added a Max/MSP 6/7/8 java-based player for audioguide concatenations by Gilbert Nouno.
 

##################
## Version 1.32 ##
##################
• Change in the Chartjs support in the log.html was made so that the log.html works without an internet connection.
 