@@ -103,34 +103,6 @@ def nextPowerOfTwo(val):
 	while result < val: result *= 2.
 	return result
 
-def getDynamicFromFilename(file, notFound=-1000):
-	TYPICAL_DYNAMICS = {'pp': -50, 'p': -40, 'mp': -34, 'mf': -24, 'f': -20, 'ff': -10}
-	MAP_DYNAMICS = {'ppmfpp': 'mf', 'pfp': 'f', 'f-ff': 'f','fp': 'f', 'ppff':'ff', 'ffpp': 'ff', 'slap': 'pp', 'sfz': 'f', 'p1': 'p', 'p2': 'pp'}
-	ALL_DYN_KEYS = list(TYPICAL_DYNAMICS.keys())
-	ALL_DYN_KEYS.extend(list(MAP_DYNAMICS.keys()))
-	SPLIT_STRINGS = ['-', '_', '.', '|'] # in order of likelihood
-	NOTHING_YET = True
-	whichStr = 0
-	dynamic = "fuck"
-	while NOTHING_YET:
-		if whichStr > len(SPLIT_STRINGS)-1:
-			break
-		splitStr = SPLIT_STRINGS[whichStr]
-		fileHead = os.path.split(file)[1]
-		strings = os.path.split(os.path.splitext(file)[0])[1].split(splitStr)
-		strings.reverse() # they tend to be at the end of the file
-		for s in strings:
-			if s in ALL_DYN_KEYS:
-				dynamic = s
-				NOTHING_YET = False
-				break
-		whichStr += 1
-	if dynamic == 'fuck':
-		return notFound, None
-	elif dynamic in MAP_DYNAMICS:
-		return TYPICAL_DYNAMICS[MAP_DYNAMICS[dynamic]], dynamic
-	else:
-		return TYPICAL_DYNAMICS[dynamic], dynamic
 
 
 def matchString(testString, matchStr, caseSensative=True):
